libs/shared-ui | added some components

--- a/libs/shared-ui/storybook-static/iframe.html
+++ b/libs/shared-ui/storybook-static/iframe.html
@@ -505,7 +505,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-Bwzg5yVn.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-B7di8ZtV.js"></script>
   </head>
 
   <body>
